...
                HorizontalLine()



                Box(
                    modifier = modifier
                        .testTag("acceptButton")
                        .padding(PaddingValues(18.dp, 13.dp))
                        .clip(RoundedCornerShape(6.dp))
                        .background(
                            color = Theme.colors.primaryMain
                        )
                        .clickable{
...
